@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2012 Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2008-2014 Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -22,6 +22,20 @@ namespace {
 }
 
 
+std::pair<boost::shared_ptr<fostlib::mime>, int> fostlib::urlhandler::router(
+    const fostlib::host &requested_host,
+    const fostlib::string &viewname,
+    fostlib::http::server::request &req
+) {
+    std::pair<fostlib::string, fostlib::json> view_fn = view::find_view(viewname);
+
+    fostlib::string path(fostlib::coerce<fostlib::string>(
+        req.file_spec().underlying()).substr(1));
+
+    return view::view_for(view_fn.first)(view_fn.second, path, req, requested_host);
+}
+
+
 bool fostlib::urlhandler::service( fostlib::http::server::request &req ) {
     // Before doing anything else run some sanity checks on the request
     if (
@@ -36,26 +50,18 @@ bool fostlib::urlhandler::service( fostlib::http::server::request &req ) {
     }
 
     // Now process it
-    fostlib::host h(req.data()->headers()["Host"].value());
-    fostlib::string requested_host(h.name());
+    fostlib::string hostname(req.data()->headers()["Host"].value());
 
     fostlib::json host_config = c_hosts.value();
-    if ( host_config.has_key(requested_host)
+    if ( host_config.has_key(hostname)
             || host_config.has_key(fostlib::string()) ) {
         // Route the request to the right handler
         try {
-            fostlib::json view_config = c_views.value();
-            std::pair<fostlib::string, fostlib::json> view_fn = view::find_view(
-                fostlib::coerce<fostlib::string>(
-                    host_config[host_config.has_key(requested_host) ?
-                        requested_host : fostlib::string()]));
-
-            fostlib::string path(fostlib::coerce<fostlib::string>(
-                req.file_spec().underlying()).substr(1));
-
+            fostlib::json view_config = host_config[
+                host_config.has_key(hostname) ? hostname : fostlib::string()];
             std::pair<boost::shared_ptr<fostlib::mime>, int > resource(
-                view::view_for(view_fn.first)(view_fn.second, path, req, h));
-            log_response(requested_host, *resource.first, resource.second);
+                router(host(hostname), fostlib::coerce<fostlib::string>(view_config), req));
+            log_response(hostname, *resource.first, resource.second);
             req(*resource.first, resource.second);
         } catch ( fostlib::exceptions::exception &e ) {
             fostlib::text_body response(
@@ -70,7 +76,7 @@ bool fostlib::urlhandler::service( fostlib::http::server::request &req ) {
                 fostlib::mime::mime_headers(), L"text/html" );
         fostlib::log::error()
             ("message", "Host configuration not found")
-            ("requested host", requested_host)
+            ("requested host", hostname)
             ("host configuration", host_config);
         req( response, 500 );
     }
