@@ -1,3 +1,6 @@
+2014-03-02  Kirit Saelensminde  <kirit@felspar.com>
+ Split out the top level HTTP parsing from the lower level routing of a request to a view.
+
 2012-08-02  Kirit Saelensminde  <kirit@felspar.com>
  Implemented a proper 301, 302, 303, 405, 500 and 501 responses.
 
